--- a/jstester/index.html
+++ b/jstester/index.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Title of page goes here</title>
+    <title>Fact Finder</title>
     
     <!-- include an external style sheet -->
     <link rel="stylesheet" href="style.css">  
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-	<h1>How to Change the Content of a Div Tag Using Buttons</h1>
+	<h1>Facts!</h1>
 	<button class ="button" type="button" onclick="changeDisplay('About 45 million people died during the Great Leap Forward.')">Fact #1</button>
 	<button class ="button" type="button" onclick="changeDisplay('Canadians say “sorry” so much that a law was passed in 2009 declaring that an apology can’t be used as evidence of admission to guilt.')">Fact #2</button>
 	<button class ="button" type="button" onclick="changeDisplay('In 2006, a Coca-Cola employee offered to sell Coca-Cola secrets to Pepsi. Pepsi responded by notifying Coca-Cola.')">Fact #3</button>
