--- a/A+S_Adventure/startpage.html
+++ b/A+S_Adventure/startpage.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		<div id = "makewidthWORK">
-			<h1 id = "restartButton"><a href="file:///C:/Users/earth/webdev/A+S_Adventure/index.html">Click to Play!</a></h1>
+			<h1 id = "restartButton"><a href="ethanj6072.github.io/index.html">Click to Play!</a></h1>
 		</div>
 	</body>
 	
