--- a/A+S_Adventure/index.html
+++ b/A+S_Adventure/index.html
@@ -10,7 +10,7 @@
 		<h1>Albert and Simon's Slightly Eldritch Adventure</h1>
 		
 		<div id = "buttonPosition">
-			<span id = "restartButton" onclick = "endGame(false, true)">Restart Game</span>
+			<span id = "links" onclick = "endGame(false, true)">Restart Game</span>
 		</div>
 		
 		<div id = "gameBoard">
@@ -49,12 +49,14 @@
 			
 		</div>
 		
-		
+		<div id = "makewidthWORK">
+			<h1 id = "links"><a href="file:///C:/Users/earth/webdev/A+S_Adventure/startpage.html">Back to Instructions and Story</a></h1>  <!--restartButton id pretty much also is link-->
+		</div>
 		
 		<div class = "message" id = "lose">
 		Close Call! Spangler Teleports Everyone to Safety.
 		
-		<span class = "link" onclick = 'loadLevel()'>Click this for New Game</span>
+		<span class = "link" onclick = 'loadLevel()'>Click here for New Game</span>
 		</div>
 		
 		<div class = "message" id = "levelup">
