--- a/A+S_Adventure/startpage.html
+++ b/A+S_Adventure/startpage.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		<div id = "makewidthWORK">
-			<h1 id = "links"><a href="index.html">Click to Play!</a></h1>
+			<h1 id = "links"><a href="https://ethanj6072.github.io/A+S_Adventure/index.html">Click to Play!</a></h1>
 		</div>
 	</body>
 	
