--- a/A+S_Adventure/index.html
+++ b/A+S_Adventure/index.html
@@ -10,7 +10,7 @@
 		<h1>Albert and Simon's Slightly Eldritch Adventure</h1>
 		
 		<div id = "buttonPosition">
-			<span id = "links" onclick = "endGame(false, true)">Restart Game</span>
+			<span class = "links" onclick = "endGame(false, true)">Restart Game</span>
 		</div>
 		
 		<div id = "gameBoard">
@@ -49,8 +49,8 @@
 			
 		</div>
 		
-		<div id = "makewidthWORK">
-			<h1 id = "links"><a href="file:///C:/Users/earth/webdev/A+S_Adventure/startpage.html">Back to Instructions and Story</a></h1>  <!--restartButton id pretty much also is link-->
+		<div class = "makewidthWORK">
+			<h1 id = "links"><a href="ethanj6072.github.io/A+S_Adventure/startpage.html">Back to Instructions and Story</a></h1>  <!--restartButton id pretty much also is link-->
 		</div>
 		
 		<div class = "message" id = "lose">
