--- a/A+S_Adventure/startpage.html
+++ b/A+S_Adventure/startpage.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html<html lang="en">
+<!DOCTYPE html>
+	<html lang="en">
 	<head>
+		
 		<meta charset = "utf-8">
 		<title>Albert and Simon's Adventure</title>
 		<link rel = "stylesheet" href = "style.css">
@@ -25,8 +27,8 @@
 			<p>Good luck.</p>
 		</div>
 		
-		<div id = "makewidthWORK">
-			<h1 id = "links"><a href="https://ethanj6072.github.io/A+S_Adventure/index.html">Click to Play!</a></h1>
+		<div class = "makewidthWORK">
+			<h1 id = "links"><a href="file:///C:/Users/earth/webdev/A+S_Adventure/index.html">Click to Play!</a></h1>
 		</div>
 	</body>
 	
