--- a/A+S_Adventure/startpage.html
+++ b/A+S_Adventure/startpage.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div class = "makewidthWORK">
-			<h1 id = "links"><a href="file:///C:/Users/earth/webdev/A+S_Adventure/index.html">Click to Play!</a></h1>
+			<h1 id = "links"><a href="https://ethanj6072.github.io/A+S_Adventure/index.html">Click to Play!</a></h1>
 		</div>
 	</body>
 	
