--- a/A+S_Adventure/index.html
+++ b/A+S_Adventure/index.html
@@ -50,7 +50,7 @@
 		</div>
 		
 		<div class = "makewidthWORK">
-			<h1 id = "links"><a href="ethanj6072.github.io/A+S_Adventure/startpage.html">Back to Instructions and Story</a></h1>  <!--restartButton id pretty much also is link-->
+			<h1 id = "links"><a href="startpage.html">Back to Instructions and Story</a></h1>  <!--restartButton id pretty much also is link-->
 		</div>
 		
 		<div class = "message" id = "lose">
