--- a/A+S_Adventure/index.html
+++ b/A+S_Adventure/index.html
@@ -10,7 +10,7 @@
 		<h1>Albert and Simon's Slightly Eldritch Adventure</h1>
 		
 		<div id = "buttonPosition">
-			<span class = "links" onclick = "endGame(false, true)">Restart Game</span>
+			<span class = "link" onclick = "endGame(false, true)">Restart Game</span>
 		</div>
 		
 		<div id = "gameBoard">
